--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -217,7 +217,7 @@
     color: rgb(207, 207, 207);
   }
   .btn-secondary{
-    color: black;
+    color: red;
     font-weight: 600;
     border-color: red;
     border-radius: 5px;
