frontend: added placeholder

--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -410,6 +410,7 @@
         name="cpf"
         (keyup)="onKey($event)"
         mask="000.000.000-00||00.000.000/0000-00"
+        placeholder="CPF | CNPJ"
         type="text"
         class="form-control"
       />
